Update index.html to fix typo on kumbakonam

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <select id="startingLocation" onchange="handleLocationChange()" required>
                         <option value="">Select starting location...</option>
                         <option value="Koyambedu Home">🏠 Koyambedu Home</option>
-                        <option value="Kumbalonam Srivatsam">🏡 Kumbalonam Srivatsam</option>
+                        <option value="Kumbakonam Srivatsam">🏡 Kumbakonam Srivatsam</option>
                         <option value="Bangalore Amigo">🏢 Bangalore Amigo</option>
                         <option value="Other">✏️ Other (specify below)</option>
                     </select>
